--- a/index.html
+++ b/index.html
@@ -30,11 +30,45 @@
         </ul></nav>
      </header>
  <main> 
-    <div class="tituloindex"><h2>un lugar para el movimiento</h2>
-     <!--imagen ilustrativa-->
-     <img src="./assets/universal.jpeg" alt="clase yoga">
-     <p>un paso por la historia del yoga 
-        La doctrina del yoga tomó grandes préstamos de la filosofía teórica del samkhia.[cita requerida] La diferencia más significativa es que el yoga no solo incluye el concepto de Íshwara (o 'Dios personal') a su visión del mundo metafísico (como lo hace el samkhia): también afirma que Dios es un modelo sobre el que se debe meditar. El objetivo del yoga es la liberación (Moksha) de las ataduras del alma con la materia a través de la conexión con lo que es eterno más allá de “Maya” ,esta realidad temporal y perecedera, que los sentidos humanos perciben y luego interpretan de acuerdo a sus propias estructuras de creencias adquiridas a lo largo de sus vidas.
+    <div class="tituloindex"><h2>Un lugar para el movimiento</h2>
+     <!--imagen ilustrativa carrusel-->
+
+     <div id="carouselExampleIndicators" class="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/espaciocuatro.webp" class="d-block w-100" alt="espaciocuatro">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/espaciotres.jpg" class="d-block w-100" alt="espaciotres">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/espaciodos.png" class="d-block w-100" alt="espaciodos">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/espaciouno.jpg" class="d-block w-100" alt="espaciouno">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/universal.jpeg" class="d-block w-100" alt="universal">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+     <p>Un paso por la historia del yoga <br>
+        La doctrina del yoga tomó grandes préstamos de la filosofía teórica del samkhia. La diferencia más significativa es que el yoga no solo incluye el concepto de Íshwara (o 'Dios personal') a su visión del mundo metafísico (como lo hace el samkhia): también afirma que Dios es un modelo sobre el que se debe meditar. <br>El objetivo del yoga es la liberación (Moksha) de las ataduras del alma con la materia a través de la conexión con lo que es eterno más allá de “Maya” ,esta realidad temporal y perecedera, que los sentidos humanos perciben y luego interpretan de acuerdo a sus propias estructuras de creencias adquiridas a lo largo de sus vidas.
      </p></div>
 <section>
     <div class="general">
