--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,9 @@
        <article>
         <h2>En el mapa</h2>
         <!--insertar mapa-->
+        <div class="puntomapa">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.6916095195434!2d-60.649320852385756!3d-32.95915057018546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab0d18841b87%3A0xf206a82c7efc4d63!2sEspa%C3%B1a%201942%2C%20S2000GBF%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1716223982069!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
         <p>Nos encontramos justo aqui</p>
        </article>
    
