[M] hago un merge

--- a/pages/whoweare.html
+++ b/pages/whoweare.html
@@ -12,19 +12,22 @@
  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>  <h1>Espacio Colibri</h1>
-        <nav><ul>
-            <li><a href="../index.html">Home
-            </a></li>
-            <li><a href="./whoweare.html">Quienes Somos?
-            </a></li>
-            <li><a href="./activites.html">Actividades
-            </a></li>
-            <li><a href="./formation.html">Formacion
-            </a></li>
-            <li><a href="./contact.html">Contacto
-            </a></li>
-        </ul></nav>
+    <header>
+        <div class="menu-principal">
+            <h1>Espacio Colibri</h1>
+            <nav><ul>
+                <li><a href="../index.html">Home
+                </a></li>
+                <li><a href="./whoweare.html">Quienes Somos?
+                </a></li>
+                <li><a href="./activites.html">Actividades
+                </a></li>
+                <li><a href="./formation.html">Formacion
+                </a></li>
+                <li><a href="./contact.html">Contacto
+                </a></li>
+            </ul></nav>
+        </div>
     </header>
 <main>
 <section>
